# open-mcp-client

./: Dokerfile  Procfile  mcp-worflow.json  mcp_server.py  package-lock.json  pyproject.toml  pyproject_fixed.toml  render.yaml  requirements.txt
agent/: Procfile  main.py  pyproject.toml
agent/sample_agent/: main.py
app/api/health/: health.js
open_mcp_client/: app.py  main.py  render.yaml  requirements.txt  setup.py
sample_agent/: agent.py  from fastapi import FastAPI, Request.py
tests/: test_py.py
