[tool.poetry]
name = "open-mcp-client"
version = "0.0.1"
description = "MCP Client"
authors = ["Ton Nom <ton.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
langchain = "^0.3.1"
openai = "^1.51.0"
# Ajouter d'autres dépendances nécessaires

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.packages]
packages = [{ include = "open_mcp_client" }]
