[tool.poetry]
name = "open-mcp-client"
version = "0.1.0"
description = ""
authors = ["Ton Nom <ton.email@example.com>"]
packages = [{ include = "open_mcp_client" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

